implement handler for creating groups
