# internal/docs/swagger.json
@@ -31,6 +31,45 @@
                         "schema": {}
                     }
                 }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "groups"
+                ],
+                "summary": "Create a new group",
+                "parameters": [
+                    {
+                        "description": "Create group",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateGroupPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GroupWithMembers"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    }
+                }
             }
         },
         "/groups/{id}": {
@@ -101,7 +140,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.AddMembersPayload"
+                            "$ref": "#/definitions/AddMembersPayload"
                         }
                     }
                 ],
@@ -125,6 +164,40 @@
         }
     },
     "definitions": {
+        "AddMembersPayload": {
+            "type": "object",
+            "required": [
+                "user_ids"
+            ],
+            "properties": {
+                "user_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "CreateGroupPayload": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "members": {
+                    "description": "Optional list of member IDs\nExample: [\"d5075280-2f7c-4967-8526-aaaca282de36\"]",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "description": "Name of the group",
+                    "type": "string",
+                    "maxLength": 255
+                }
+            }
+        },
         "Group": {
             "type": "object",
             "properties": {
@@ -196,20 +269,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "types.AddMembersPayload": {
-            "type": "object",
-            "required": [
-                "user_ids"
-            ],
-            "properties": {
-                "user_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         }
